# mcos

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml  test.py
.github/workflows/: python-check.yml
minecraft/: position.py  world.py
minecraft/block/: range.py  spilt.py  split.py
syscore/: base.py  disk.py
syscore/mem/internal/: memory.py
